--- a/package.json
+++ b/package.json
@@ -9,5 +9,32 @@
   "scripts": {
     "build": "tsc",
     "typecheck": "tsc --noEmit"
+  },
+  "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.17.0",
+    "axios": "^1.7.0",
+    "cfonts": "^3.3.0",
+    "chalk": "^5.3.0",
+    "commander": "^12.0.0",
+    "dotenv": "^16.4.0",
+    "enquirer": "^2.4.1",
+    "fs-extra": "^11.2.0",
+    "ink": "^4.4.1",
+    "marked": "^15.0.12",
+    "marked-terminal": "^7.3.0",
+    "openai": "^5.10.1",
+    "react": "^18.3.1",
+    "ripgrep-node": "^1.0.0",
+    "tiktoken": "^1.0.21"
+  },
+  "devDependencies": {
+    "@types/fs-extra": "^11.0.2",
+    "@types/node": "^20.8.0",
+    "@types/react": "^18.3.3",
+    "@typescript-eslint/eslint-plugin": "^8.37.0",
+    "@typescript-eslint/parser": "^8.37.0",
+    "eslint": "^9.31.0",
+    "tsx": "^4.0.0",
+    "typescript": "^5.3.3"
   }
 }
