--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "rootDir": "./src",
     "strict": true,
     "noImplicitAny": true,
-    "exactOptionalPropertyTypes": false,
+    "exactOptionalPropertyTypes": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
