--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "ES2022",
     "module": "ESNext",
     "lib": [
-      "ES2022"
+      "ES2022",
+      "DOM"
     ],
     "outDir": "./dist",
     "rootDir": "./src",
@@ -11,7 +12,7 @@
     "noImplicitAny": true,
     "exactOptionalPropertyTypes": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
+    "skipLibCheck": false,
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
     "sourceMap": true,
@@ -23,10 +24,6 @@
     "noUnusedParameters": true,
     "types": [
       "node"
-    ],
-    "typeRoots": [
-      "./types",
-      "./node_modules/@types"
     ]
   },
   "include": [
