--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "typecheck": "tsc --noEmit",
     "test": "npm run -s typecheck && npm run -s test:unit",
     "audit:ci": "npm audit --audit-level=high",
-    "test:unit": "tsx --test test/**/*.test.ts"
+    "test:unit": "tsx --test test/**/*.test.ts",
+    "lint": "eslint src test --ext .ts,.tsx"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.17.0",
