--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ GROK_API_KEY=your_grok_api_key_here
 
 # Optional: Custom Grok API Base URL
 # GROK_BASE_URL=https://api.x.ai/v1
+
+# Optional: MCP URL policy overrides (disabled by default)
+# GROK_ALLOW_LOCAL_MCP_HTTP=1
+# GROK_ALLOW_PRIVATE_MCP_HTTPS=1
