--- a/tsconfig.strict.json
+++ b/tsconfig.strict.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "exactOptionalPropertyTypes": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noUnusedParameters": true,
+    "noUncheckedIndexedAccess": true
   }
 }
